--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "express-fileupload": "^1.1.10",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.9.25",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "music-metadata": "^7.0.1",
+    "sha1": "^1.1.1"
   }
 }
